--- a/src/app/modules/autentificacion/pages/registro/registro.component.html
+++ b/src/app/modules/autentificacion/pages/registro/registro.component.html
@@ -1,51 +1,48 @@
 <div class="container">
-    <div class="row">
-      <h1>registrate</h1>
+  <div class="row">
+      <h1>Registrate</h1>
+
       <i class="material-icons" style="font-size: 200px;">person</i>
-  
-      <!--Nombre de usuario-->
+
+      <!-- Nombre de usuario -->
       <mat-form-field appearance="fill">
-        <mat-label>Ingrese nombre de usuario:</mat-label>
-        <!--ngModel = conecta de forma bidireccional como un formulario-->
-        <input [(ngModel)]="usuarios.nombre" matInput placeholder="Ej:rodrigo" required>
-        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-  
+          <mat-label>Ingrese nombre de usuario:</mat-label>
+          <!-- ngModel = conecta de forma bidireccional como un formulario -->
+          <input [(ngModel)]="usuarios.nombre" matInput placeholder="Ej: Pepe" required>
       </mat-form-field>
-      <!--Apellido del usuario-->
+
+      <!-- Apellido de usuario-->
       <mat-form-field appearance="fill">
-        <mat-label>Ingrese su apellido:</mat-label>
-        <input [(ngModel)]="usuarios.apellido" matInput placeholder="Ej:pepe" required>
-        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-  
+          <mat-label>Ingrese su apellido:</mat-label>
+          <input [(ngModel)]="usuarios.apellido" matInput placeholder="Ej: Peréz" required>
       </mat-form-field>
-      <!--Email del usuario-->
+
+      <!-- Email de usuario -->
       <mat-form-field appearance="fill">
-        <mat-label>Ingrese su email</mat-label>
-        <input [(ngModel)]="usuarios.email" matInput placeholder="Ej: usuario123@gmail.com" required>
-        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+          <mat-label>Ingrese su email:</mat-label>
+          <input [(ngModel)]="usuarios.email" matInput placeholder="Ej: superpepe@gmail.com" required>
       </mat-form-field>
-  
-      <!--Rol del usuario-->
+
+      <!-- Rol de usuario -->
       <mat-form-field>
-        <mat-label>Seleccione rol</mat-label>
-        <mat-select [(ngModel)]="usuarios.rol">
-          <mat-option value="one">Administrador</mat-option>
-          <mat-option value="vis">Visitante</mat-option>
-        </mat-select>
+          <mat-label>Seleccione un rol:</mat-label>
+          <mat-select [(ngModel)]="usuarios.rol" required>
+            <mat-option value="admin">Administrador</mat-option>
+            <mat-option value="vis">Visitante</mat-option>
+          </mat-select>
       </mat-form-field>
-  
+
+      <!-- Contraseña de usuario -->
       <mat-form-field>
-        <mat-label>Enter your password</mat-label>
-        <input [(ngModel)]="usuarios.password" matInput [type]="hide ? 'password' : 'text'" #input minlength="6" required>
-        <button class="boton" matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-          [attr.aria-pressed]="hide">
-          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
-        <mat-hint align="start">Minimo:6/{{input.value.length}}</mat-hint>
+          <mat-label>Ingrese su contraseña</mat-label>
+          <input [(ngModel)]="usuarios.password" matInput [type]="hide ? 'password' : 'text'" #input minlength="6" required>
+          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+          <mat-hint text-align="start">Mínimo:6/{{input.value.length}}</mat-hint>
       </mat-form-field>
-  
-      <!--boton para enviar la informacion-->
-      <button mat-raised-button color="primary" class="boton" (click)="registrar()">Enviar</button>
-  
-    </div>
+
+      <!-- Botón para enviar la información -->
+      <button mat-raised-button color="primary" class="boton" (click)="registrar()">Registrar</button>
   </div>
+</div>
