--- a/src/app/modules/autentificacion/pages/iniciosesion/iniciosesion.component.html
+++ b/src/app/modules/autentificacion/pages/iniciosesion/iniciosesion.component.html
@@ -1,27 +1,23 @@
-
 <div class="container">
-    <div class="row">
-      <h1>inicio sesion</h1>
+  <div class="row">
+      <h1>Inicia Sesión</h1>
+
       <i class="material-icons" style="font-size: 200px;">person</i>
-      <!--Email del usuario-->
+      
       <mat-form-field appearance="fill">
-        <mat-label>Ingrese su email</mat-label>
-        <input [(ngModel)]="usuarios.email" matInput placeholder="Ej: usuario123@gmail.com" required>
-        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+          <mat-label>Ingrese su email:</mat-label>
+          <input [(ngModel)]="usuarioIngresado.email" matInput placeholder="Ej: pepitoperez2022@gmail.com" required>
       </mat-form-field>
-  
+
       <mat-form-field>
-        <mat-label>Enter your password</mat-label>
-        <input [(ngModel)]="usuarios.password" matInput [type]="hide ? 'password' : 'text'" #input minlength="6" required>
-        <button class="boton" matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-          [attr.aria-pressed]="hide">
-          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
-        <mat-hint align="start">Minimo:6/{{input.value.length}}</mat-hint>
+          <mat-label>Ingrese su contraseña:</mat-label>
+          <input [(ngModel)]="usuarioIngresado.password" matInput [type]="hide ? 'password' : 'text'" #input minlength="6" required>
+          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+          <mat-hint align="start">Mínimo:6/{{input.value.length}}</mat-hint>
       </mat-form-field>
-  
-      <!--boton para enviar la informacion-->
-      <button mat-raised-button color="primary" class="boton" (click)="iniciosesion()">Enviar</button>
-  
-    </div>
+
+      <button class="boton" mat-raised-button color="primary" (click)="iniciarSesion()">Iniciar Sesión</button>
   </div>
+</div>
