--- a/src/app/modules/productos/components/card-ropa/card-ropa.component.html
+++ b/src/app/modules/productos/components/card-ropa/card-ropa.component.html
@@ -1,1 +1,20 @@
-<p>card-ropa works!</p>
+<!-- Card para mostrar TODOS los productos que se hayan ingresado -->
+<div class="row">
+    <div class="col" *ngFor="let producto of coleccionRopa">
+        <div class="card" style="width: 18rem;">
+            <img src="{{producto.imagen}}" class="card-img-top" alt="{{producto.alt}}">
+
+            <div class="card-body">
+                <h5 class="card-title">{{producto.nombre}}</h5>
+                <p class="card-text">{{producto.precio}}</p>
+
+                <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" 
+                data-bs-target="#modalCardRopa" (click)="mostrarVer(producto)">
+                    Ver más
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal para ver más información -->
