--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,1 +1,54 @@
-<p>inicio works!</p>
+<mat-card class="example-card" appearance="outlined">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Pantalon cargo</mat-card-title>
+    </mat-card-header>
+    <img mat-card-image src="../../../../../assets/pantalon.jpg" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+      <p>
+        pantalon cargo <br>
+        talles variados del 36-42
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+
+    <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Pantalon cargo</mat-card-title>
+    </mat-card-header>
+      <img mat-card-image src="../../../../../assets/campera.jpeg" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p>
+          pantalon cargo <br>
+          talles variados del 36-42
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Pantalon cargo</mat-card-title>
+    </mat-card-header>
+      <img mat-card-image src="../../../../../assets/remera.jpeg     " alt="Photo of a Shiba Inu">
+    <mat-card-content>
+        <p>
+          pantalon cargo <br>
+          talles variados del 36-42
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    
+</mat-card>
+
+
+
+  
