--- a/src/app/modules/shared/components/nadvar/nadvar.component.html
+++ b/src/app/modules/shared/components/nadvar/nadvar.component.html
@@ -9,25 +9,26 @@
   </mat-menu>
 
   <span>My App</span>
-  <button id="menuInicio" mat-button routerLink="/inicio">Inicio</button>
 
+  <button id="menuInicio" mat button routerLink="/inicio"></button>
    <!-- Menu desplegable: SECCIÓN DE PRODUCTOS -->
-  <button mat-button [matMenuTriggerFor]="producto">producto</button>
+
   <mat-menu #producto="matMenu">
 
       <button mat-menu-item routerLink="/topsdia">topsDia</button>
-      <button mat-menu-item routerLink="/topsnpche">topsNoche</button>
+      <button mat-menu-item routerLink="/topsnoche">topsNoche</button>
       <button mat-menu-item routerLink="/pantalon">Parte de abajo</button>
-      <button mat-menu-item routerLink="/tops">camperas</button>
-     
+      <button mat-menu-item routerLink="/camperas">camperas</button>
+      <button mat-menu-item routerLink="/Productos">productos</button>
   </mat-menu>
 
   <span class="example-spacer"></span>
 
   <button mat-button [matMenuTriggerFor]="usuario"><mat-icon>person</mat-icon></button>
   <mat-menu #usuario="matMenu">
-    <button mat-menu-item routerLink="/registro">Registrarse</button>
-    <button mat-menu-item routerLink="/iniciosesion">Inicio Sesion</button>
+    <button mat-menu-item  (click)="iniciar()" *ngIf="logueado" routerLink="/registro">Registrarse</button>
+    <button mat-menu-item  (click)="iniciar()" *ngIf="logueado "routerLink="/inicio-sesion">Inicio Sesion</button>
+    <button mat-menu-item (click)="cerrarSesion()" *ngIf="deslogueado">Cerrar Sesión</button>
   </mat-menu>
 
  
