--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,53 +1,75 @@
-<mat-card class="example-card" appearance="outlined">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Pantalon cargo</mat-card-title>
-    </mat-card-header>
-    <img mat-card-image src="../../../../../assets/pantalon.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        pantalon cargo <br>
-        talles variados del 36-42
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-
-    <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Pantalon cargo</mat-card-title>
-    </mat-card-header>
-      <img mat-card-image src="../../../../../assets/campera.jpeg" alt="Photo of a Shiba Inu">
-      <mat-card-content>
-        <p>
-          pantalon cargo <br>
-          talles variados del 36-42
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-      </mat-card-actions>
-
+<div class="row">
+  <div class="col-lg-4">
+    <mat-card class="example-card" appearance="outlined">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Pantalon cargo</mat-card-title>
-    </mat-card-header>
-      <img mat-card-image src="../../../../../assets/remera.jpeg     " alt="Photo of a Shiba Inu">
-    <mat-card-content>
-        <p>
+        <mat-card-title class="titulo">Pantalones</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="../../../../../assets/pantalon.jpg" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p class="descripcion">
           pantalon cargo <br>
           talles variados del 36-42
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
+        <button mat-button class="button">LIKE</button>
+        <button mat-button class="button">SHARE</button>
       </mat-card-actions>
-    
-</mat-card>
+  </mat-card>
+  </div>
+
+  <div class="col-lg-4">
+    <mat-card class="example-card" appearance="outlined">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title class="titulo">Camperas</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="../../../../../assets/campera.jpeg" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p class="descripcion">
+          Campera de cuero <br>
+          talles variados del 36-42
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button class="button">LIKE</button>
+        <button mat-button class="button">SHARE</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+
+  <div class="col-lg-4">
+    <mat-card class="example-card" appearance="outlined">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title class="titulo">Remeras</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="../../../../../assets/remera.jpeg     " alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p class="descripcion">
+          Remera de algodon<br>
+          blanca basica <br>
+          talle 1 al 3
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button class="button">LIKE</button>
+        <button mat-button class="button">SHARE</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+
 
 
 
