--- a/src/app/modules/productos/pages/productos/productos.component.css
+++ b/src/app/modules/productos/pages/productos/productos.component.css
@@ -7,3 +7,7 @@
 h1{
     padding: 1rem;
 }
+
+.carousel-control-prev-icon, .carousel-control-next-icon {
+    filter: invert(48%) sepia(69%) saturate(511%) hue-rotate(86deg) brightness(93%) contrast(99%);
+}
