--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<!--Navegador-->
 <app-nadvar></app-nadvar>
+
+<!-- Renderiza toda la página -->
 <router-outlet></router-outlet>
+ 
+<!--Pie de Página-->
 <app-footer></app-footer>
