--- a/src/app/modules/admin/components/table/table.component.html
+++ b/src/app/modules/admin/components/table/table.component.html
@@ -183,15 +183,20 @@
 <div class="modal fade" *ngIf="modalVisibleProducto" id="eliminarProducto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
+       <!-- ENCABEZADO -->
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">esta seguro de eliminar el producto?</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
+      <!-- CUERPO DEL MODAL -->
       <div class="modal-body">
+        <!-- Mostramos al usuario información del producto que quiere eliminar -->  
+
         {{productoSeleccionado.nombre}}
  
         <img src="{{productoSeleccionado.imagen}}" alt="{{productoSeleccionado.alt}}" width="100px" >
       </div>
+      
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="borrarProducto()">Eliminar</button>
         <button type="button" class="btn btn-online-secondary" data-bs-dismiss="modal">cerrar</button>
