--- a/src/app/modules/inicio/components/card/card.component.html
+++ b/src/app/modules/inicio/components/card/card.component.html
@@ -11,8 +11,7 @@
                     <img mat-card-image src="{{i.imagen}}" alt="{{i.alt}}">
                     <mat-card-content>
                       <p>
-                        {{i.precio
-                        }}
+                        {{i.precio}}
                       </p>
                     </mat-card-content>
                     <mat-card-actions>
