--- a/src/app/modules/productos/components/carrusel/carrusel.component.html
+++ b/src/app/modules/productos/components/carrusel/carrusel.component.html
@@ -1,22 +1,21 @@
 <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="../../../../../assets/Primer_item_carrusel.png" class="d-block w-100" alt="Primer item">
-        </div>
-        <div class="carousel-item" *ngFor="let producto of productosCarrusel">
-            <img src="{{producto.imagen}}" class="d-block w-100" alt="{{producto.alt}}">
-        </div>
+      <div class="carousel-item active">
+        <img src="../../../../../assets/30.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../../../../../assets/Colores infinitos.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
     </button>
-</div>
-<div class="col">
-    <app-card  (productoAgregado)="productoAnadido($event)" [productoReciente]="product">
-    </app-card>
 </div>
