--- a/src/app/modules/autentificacion/pages/registro/registro.component.html
+++ b/src/app/modules/autentificacion/pages/registro/registro.component.html
@@ -43,6 +43,6 @@
       </mat-form-field>
 
       <!-- Botón para enviar la información -->
-      <button mat-raised-button color="primary" class="boton" (click)="registrar()">Registrar</button>
+      <button class="boton" mat-raised-button color="primary" class="boton" (click)="registrar()">Registrar</button>
   </div>
 </div>
